2000-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableAffine): New class to influence text
 	scaling, rotation, and translation (as defined by SVG XML).
	(DrawableAngle): New class to influence text drawing angle.
	(DrawableDecoration): New class to influence text decoration such
 	as underline.
	(DrawableFill): New class to set object filling color.
	(DrawableFillOpacity): New class to set opacity to use when
 	filling object.
	(DrawableFont::): New class to set font.
	(DrawableGravity): New class to set text placement gravity.
	(DrawablePointSize): New class to set font point size.
	(DrawableStroke): New class to set drawing stroke color.
	(DrawableStrokeOpacity): New class to set drawing stroke opacity.
	(DrawableStrokeWidth): New class to set drawing stroke width.

2000-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableImage): Added width and height
 	parameters to specify size to scale rendered image to.  This is
 	actually a bug-fix since it seems that the correct drawing command
 	was no longer being generated.

2000-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): New overloaded method to read an image
 	based on an array of raw pixels, of specified type and mapping, in
 	memory.
	(write): New overloaded method to write image to an array of
 	pixels, of specified type and mapping.
	(Image): New overloaded constructor to construct an image based on
 	an array of raw pixels, of specified type and mapping, in memory.

2000-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorize): API change to match change in
 	ImageMagick.  Now accepts percentage of red, green, and blue to
 	colorize with using specified pen color.

2000-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Drawable.h: Reverted Coordinate implemenation back
 	from and STL pair based implementation to a simple class.  Maybe